Fixed auth page white space issue

--- a/src/app/auth-module/auth-skeleton/auth-skeleton.component.css
+++ b/src/app/auth-module/auth-skeleton/auth-skeleton.component.css
@@ -103,3 +103,9 @@
     padding: 60px 0;
   }
 }
+
+@media (min-height: 650px) {
+  .header-bg-wrap {
+    height: 100vh;
+  }
+}
